--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
   --font-karla: "Karla", sans-serif;
 }
 
+html {
+  box-sizing: border-box;
+}
+
 body {
   font-family: var(--font-karla);
   margin: 0;
@@ -141,6 +145,7 @@ body {
 /* footer */
 
 .attribution {
+  margin-top: 4rem;
   font-size: 11px;
   text-align: center;
 }
@@ -154,7 +159,14 @@ body {
     max-width: 1440px;
     margin: 0 auto;
     padding: 150px;
-    border: 1px solid blue;
+    background-image: url("./images/bg-pattern-top-desktop.svg"),
+      url("./images/bg-pattern-bottom-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+  }
+
+  .social-proof-section {
+    padding-inline: 0;
   }
 
   .container {
@@ -204,5 +216,26 @@ body {
   .rating-text {
     padding-right: 2rem;
     text-align: start;
+  }
+
+  .testimonials {
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 1.875rem;
+    border: 1px solid red;
+  }
+  .testimonial {
+    width: 317px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .testimonials div:nth-child(2) {
+    margin-top: 1rem;
+  }
+  .testimonials div:nth-child(3) {
+    margin-top: 2rem;
   }
 }
