--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ body {
     background-image: url("./images/bg-pattern-top-desktop.svg"),
       url("./images/bg-pattern-bottom-desktop.svg");
     background-repeat: no-repeat;
-    background-position: top left, top right;
+    background-position: top left, bottom right;
   }
 
   .social-proof-section {
