--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
 /* Responsive Design */
 @media (min-width: var(--breakpoint)) {
   body {
-    max-width: 1440px;
+    max-width: 90rem;
     margin: 0 auto;
     padding: 150px;
     background-image: url("./images/bg-pattern-top-desktop.svg"),
